--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ coverage
 
 # production
 build
+dist
 
 # misc
 .env
@@ -22,3 +23,4 @@ yarn-debug.log*
 yarn-error.log*
 
 package-lock.json
+project_structure.text
